--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include LICENSE
 include README.md
-recursive-include django-app-generator/templates *
-recursive-include django-app-generator/management *
+
+recursive-include app_generator/templates *
+recursive-include app_generator/management *
